--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       subMaxLevel: 4, // 生成目录的最大层级
       mergeNavbar: true, // 小屏设备下合并导航栏到侧边栏
       alias: { // 定义路由别名，可以更自由的定义路由规则。 支持正则
-        '/.*/_sidebar.md': '/_sidebar.md',//防止意外回退
-        '/.*/_navbar.md': '/_navbar.md'
+        '/.*/_sidebar.md': 'https://pzh1649090050.github.io/crm_book/_sidebar.md',//防止意外回退
+        '/.*/_navbar.md': 'https://pzh1649090050.github.io/crm_book/_navbar.md'
       } 
     }
   </script>
